# libtre

./: .clang-format  .gitignore  CMakeLists.txt  README.md  annotated.html  annotated_dup.js  atlas_8hpp.html  atlas_8hpp_source.html  audio_8hpp_source.html  bitmap__text__manager_8hpp_source.html  bitmap__text__renderer_8hpp_source.html  classes.html  classtre_1_1Atlas2D-members.html  classtre_1_1Atlas2D.html  classtre_1_1Atlas2D.js  classtre_1_1AudioManager-members.html  classtre_1_1AudioManager.html  classtre_1_1AudioManager.js  classtre_1_1AudioSource-members.html  classtre_1_1AudioSource.html  classtre_1_1AudioSource.js  classtre_1_1AudioStream-members.html  classtre_1_1AudioStream.html  classtre_1_1AudioStream.js  classtre_1_1BitmapFontLoadError-members.html  classtre_1_1BitmapFontLoadError.html  classtre_1_1BitmapTextManager-members.html  classtre_1_1BitmapTextManager.html  classtre_1_1BitmapTextManager.js  classtre_1_1BitmapTextRenderer-members.html  classtre_1_1BitmapTextRenderer.html  classtre_1_1DebugTextRenderer-members.html  classtre_1_1DebugTextRenderer.html  classtre_1_1DebugTextRenderer.js  classtre_1_1DynAtlas2D-members.html  classtre_1_1DynAtlas2D.html  classtre_1_1DynAtlas2D.js  classtre_1_1DynamicTextManager-members.html  classtre_1_1DynamicTextManager.html  classtre_1_1DynamicTextManager.js  (+164 more)
.github/workflows/: main.yml
cmake/: add_embedded_file.cmake  add_shader.cmake  treConfig.cmake.in
doxygen/: Doxyfile
doxygen/manual/: debug_text_format.dox  localization_file_format.dox  rendered_text_format.dox  tref.dox
include/tre/: atlas.hpp  audio.hpp  bitmap_text_manager.hpp  bitmap_text_renderer.hpp  debug_text_renderer.hpp  dynamic_text_manager.hpp  dynamic_text_renderer.hpp  localization_manager.hpp  render_view.hpp  renderer_2d.hpp  renderer_base.hpp  sampler.hpp  state_manager.hpp  static_text_manager.hpp  static_text_renderer.hpp  text.hpp  text_renderer.hpp  tre.hpp
resources/: debug_text.frag  debug_text.vert  renderer_2d.frag  renderer_2d.vert
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  concepts_0.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+66 more)
src/: atlas.cpp  audio.cpp  bitmap_text_manager.cpp  bitmap_text_renderer.cpp  debug_text_renderer.cpp  dynamic_text_manager.cpp  dynamic_text_renderer.cpp  localization_manager.cpp  render_view.cpp  renderer_2d.cpp  renderer_base.cpp  sampler.cpp  state_manager.cpp  static_text_manager.cpp  static_text_renderer.cpp  text.cpp  text_renderer.cpp
tools/: CMakeLists.txt
tools/qoi/: CMakeLists.txt
tools/stb_image/: CMakeLists.txt  stb_image.c
tools/tref/: CMakeLists.txt  tref.cpp  tref.hpp
tools/trefc/: CMakeLists.txt  image.cpp  input.cpp  main.cpp  output.cpp  trefc.hpp
tools/trefc/include/: common.hpp  image.hpp  input.hpp  output.hpp
tools/trefc/src/: dependencies.cpp  image.cpp  input.cpp  main.cpp  output.cpp
