cmake_minimum_required(VERSION 3.23.0...3.30.0 FATAL_ERROR)

if (WIN32)
    option(ANSI_COLORED_TEXT "Enable the use of ANSI escape sequences for colored text output" OFF)
else ()
    option(ANSI_COLORED_TEXT "Enable the use of ANSI escape sequences for colored text output" ON)
endif ()

project(trefc LANGUAGES C CXX VERSION 1.0.0)
add_executable(trefc input.cpp image.cpp output.cpp main.cpp)
target_compile_features(trefc PRIVATE cxx_std_20)
target_link_libraries(trefc PRIVATE tref stb_image)
if (ANSI_COLORED_TEXT)
    target_compile_definitions(trefc PRIVATE TREFC_ANSI_COLORS)
endif ()